fixed layout issue

--- a/attireflow/src/layout/layout.module.css
+++ b/attireflow/src/layout/layout.module.css
@@ -5,6 +5,10 @@
   flex-direction: column;
 
   & > main {
-    margin: auto;
+    margin-bottom: 40px;
+  }
+
+  & > footer {
+    margin-top: auto;
   }
 }
